--- a/CourseProject.Rmd
+++ b/CourseProject.Rmd
@@ -119,3 +119,16 @@ problem_id<-testing$problem_id
 results<-data.frame(problem_id,predictions)
 print(results)
 ```
+
+# Submission
+```{r}
+pml_write_files = function(x){
+  n = length(x)
+  for(i in 1:n){
+    filename = paste0("problem_id_",i,".txt")
+    write.table(x[i],file=filename,quote=FALSE,row.names=FALSE,col.names=FALSE)
+  }
+}
+
+pml_write_files(predictions)
+```
